2002-01-28  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/bb_udp.c: bind to WTLS ports 9202 and 9203 only in case we
      have HAVE_WTLS_OPENSSL defined, otherwise kwtls may be used to
      bind to those.
    * gw/shared.c: added WTLS reporting in version_report_string()

2002-01-28  Stipe Tolj  <tolj@wapme-systems.de>
	* configure{,.in}: modified --with-wtls implementation to be
      more --with-ssl style and moved it to the end.
    * gw/pki.[ch], gw/wapbox.c, wtls-secmgr.c, wtls.c, wtls_pdu.c,
      gw/wtls_pdusupport.c, wtls_statesupport.c: make at least the
      whole thing compile and build using --with-wtls=openssl.

2002-01-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsbox.c: added multi-cast support in smsbox_req_handle(), see 
      [Msg-ID: <3C45F6E8.F677C8D1@wapme-systems.de>]

2002-01-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/wap_ota_prov.h: moved to gw/ota_prov_attr.h and added MMSURL type
    * gw/ota_prov.c, gw/smsbox.c: changed header include to ota_prov_attr.h.
    * gw/ota_compiler.c: added MMSURL type.

2002-01-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/ota_prov.[ch]: fixed typo in ota_tokenize_bookmarks(). Removed 
      static function declarations from header file.

2002-01-27  Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml: updated SMPP documentation for port = 0
    * gw/smsc_smpp.c: applied patch to allow disabling of SMPP threads, using
      values for the ports, suggested by Nisan Bloch <nisof@amagoblin.co.za>
      [Msg-ID: <5.1.0.14.0.20020117224637.00a845b0@amagoblin.ialien.co.za>]

2002-01-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/date.c: applied fix to solve date_convert_universal()
      misbehaviour, suggested by "Angel Fradejas" <afradejas@mediafusion.es>
      [Msg-ID: <FMEKKCFKIGBADHGIJKPJEEIDCLAA.afradejas@mediafusion.es>]

2002-01-27  Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml: added 'ota-bookmark' documentation
