@@ -1,3 +1,7 @@
+2002-01-28 Andreas Fink <andreas@fink.org>
+    * gw/smsc_smpp.c: fixed SMPP for unicode sending
+    * gwlib/conn.c: reported better where mutex fails
+
 2002-01-28  Stipe Tolj  <tolj@wapme-systems.de>
     * gw/bb_udp.c: bind to WTLS ports 9202 and 9203 only in case we
       have HAVE_WTLS_OPENSSL defined, otherwise kwtls may be used to
